CHATS_SIT/force-app/main/default/objects/batchsit_t_sub_pmt_hist__x.object
<CustomObject>
    <description>batchsit$t_sub_pmt_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>batchsit$t_sub_pmt_hist</externalName>
    <fields>
        <fullName>amt_copay_pmt_sub__c</fullName>
        <description>amt_copay_pmt_sub</description>
        <externalDeveloperName>amt_copay_pmt_sub</externalDeveloperName>
        <label>Sub Payment Copay Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_rate_pmt_sub__c</fullName>
        <description>amt_rate_pmt_sub</description>
        <externalDeveloperName>amt_rate_pmt_sub</externalDeveloperName>
        <label>Sub Payment Rate Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amt_total_pmt_sub__c</fullName>
        <description>amt_total_pmt_sub</description>
        <externalDeveloperName>amt_total_pmt_sub</externalDeveloperName>
        <label>Sub Payment Total Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cde_reimbsl_pmt__c</fullName>
        <description>cde_reimbsl_pmt</description>
        <externalDeveloperName>cde_reimbsl_pmt</externalDeveloperName>
        <label>Payment Reimburisable Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_status_pmt_sub__c</fullName>
        <description>cde_status_pmt_sub</description>
        <externalDeveloperName>cde_status_pmt_sub</externalDeveloperName>
        <label>Sub Payment Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdbyid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>createdbyid</description>
        <externalDeveloperName>createdbyid</externalDeveloperName>
        <label>Created By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_sub_pmt_hist1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>createddate__c</fullName>
        <description>createddate</description>
        <externalDeveloperName>createddate</externalDeveloperName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_created_hist__c</fullName>
        <description>dte_created_hist</description>
        <externalDeveloperName>dte_created_hist</externalDeveloperName>
        <label>History Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_auth__c</fullName>
        <description>idn_auth</description>
        <externalDeveloperName>idn_auth</externalDeveloperName>
        <label>Auth ID</label>
        <length>50</length>
        <referenceTargetField>T_AUTH__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_AUTH__c</referenceTo>
        <relationshipLabel>Sub Payment Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_sub_pmt_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_period_serv__c</fullName>
        <description>idn_period_serv</description>
        <externalDeveloperName>idn_period_serv</externalDeveloperName>
        <label>Service Period ID</label>
        <length>50</length>
        <referenceTargetField>T_SERV_PERIOD__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_SERV_PERIOD__c</referenceTo>
        <relationshipLabel>Sub Payment Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_sub_pmt_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_pmt__c</fullName>
        <description>idn_pmt</description>
        <externalDeveloperName>idn_pmt</externalDeveloperName>
        <label>Payment ID</label>
        <length>50</length>
        <referenceTargetField>T_PAYMT__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_PAYMT__c</referenceTo>
        <relationshipLabel>Sub Payment Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_sub_pmt_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_pmt_sub__c</fullName>
        <description>idn_pmt_sub</description>
        <externalDeveloperName>idn_pmt_sub</externalDeveloperName>
        <label>Sub Payment ID</label>
        <length>50</length>
        <referenceTo>batchsit_t_sub_pmt__x</referenceTo>
        <relationshipLabel>Sub Payment Legacy History</relationshipLabel>
        <relationshipName>batchsit_t_sub_pmt_hist</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>idn_pmt_sub_hist__c</fullName>
        <description>idn_pmt_sub_hist</description>
        <externalDeveloperName>idn_pmt_sub_hist</externalDeveloperName>
        <label>Identifier sub payment history</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_prog_fndg__c</fullName>
        <description>idn_prog_fndg</description>
        <externalDeveloperName>idn_prog_fndg</externalDeveloperName>
        <label>Prorgam finding ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>batchsit_t_sub_pmt_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Sub Payment History</label>
    <pluralLabel>Sub Payment History</pluralLabel>
</CustomObject>